laplacian of scalar field

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,8 @@
     {% if laplacian %}
     <p>The Laplacian of {{laplacianexpression}} is {{laplacian}}.</p>
     {% endif %}
+
+    <p>{{result}}</p>
 </div>
 
 </body>
